// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the same as last time 1`] = `
<div
  className="cell auto player"
  id="house"
>
  <div
    className="cell"
  >
    <h3>
      house
    </h3>
  </div>
  <div
    className="cell"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Play card
    </button>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="grid-x grid-padding-x small-12"
    >
      <div
        id="test"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the same as last time with a button 1`] = `
<div
  className="cell auto player"
  id="house"
>
  <div
    className="cell"
  >
    <h3>
      house
    </h3>
  </div>
  <div
    className="cell"
  >
    <button
      className="button"
      onClick={[MockFunction]}
    >
      Play card
    </button>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="grid-x grid-padding-x small-12"
    >
      <div
        id="test"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the same as last time without a button 1`] = `
<div
  className="cell auto player"
  id="house"
>
  <div
    className="cell"
  >
    <h3>
      house
    </h3>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="grid-x grid-padding-x small-12"
    >
      <div
        id="test"
      >
        Text
      </div>
    </div>
  </div>
</div>
`;
